--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
     <h1 id="PreviousMap"><a href="#PreviousMap" class=title>Archived Mysterious Island Map<br>(Can be reentered by shortcut set in Hero Wars Simulator)</a></h1>
     <div class="guildwarlog-container">
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-1</div>
+      <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-2</div>
     </div>
 
     <div class="footer"></div>
