--- a/map/Map-2.html
+++ b/map/Map-2.html
@@ -86,7 +86,7 @@
           <p>Mysterious Island Map 2 Eastern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1q_0VsXdHhfmsYHB01RqGRMy74roZ5AYi/view?usp=sharing" target="_blank">
-          <img src="img/map/map2-island-east.jpg" alt="Forest" style="width:100%">
+          <img src="../img/map/map2-island-east.jpg" alt="Forest" style="width:100%">
         </a>
         
       </div>
@@ -96,7 +96,7 @@
           <p>Mysterious Island Map 2 Northern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1wMMLyjiU_ZfXgkLsynT4PgYUZ-Rzbj8t/view?usp=sharing" target="_blank">
-          <img src="img/map/map2-island-north.jpg" alt="Forest" style="width:100%">
+          <img src="../img/map/map2-island-north.jpg" alt="Forest" style="width:100%">
         </a>
         
       </div>
@@ -106,7 +106,7 @@
           <p>Mysterious Island Map 2 Southern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1ZCXG0kbGXIAxjr2f_9a_iCwStNpmjhm8/view?usp=sharing" target="_blank">
-          <img src="img/map/map2-island-south.jpg" alt="Forest" style="width:100%">
+          <img src="../img/map/map2-island-south.jpg" alt="Forest" style="width:100%">
         </a>
       </div>
     </div>
