--- a/index.html
+++ b/index.html
@@ -105,29 +105,10 @@
 
           <p>Mysterious Island Map 2 Eastern Part</p>
         </div>
-        <a href="https://drive.google.com/file/d/1q_0VsXdHhfmsYHB01RqGRMy74roZ5AYi/view?usp=sharing" target="_blank">
-          <img src="img/map/map2-island-east.jpg" alt="Forest" style="width:100%">
+        <a href="https://drive.google.com/file/d/1MChco1WmRy-Ofj6byy-M4uRSfdJXdhBm/view?usp=sharing" target="_blank">
+          <img src="img/map/map3.jpg" alt="Forest" style="width:100%">
         </a>
         
-      </div>
-      <div class="map">
-        <div class="image-description">
-
-          <p>Mysterious Island Map 2 Northern Part</p>
-        </div>
-        <a href="https://drive.google.com/file/d/1wMMLyjiU_ZfXgkLsynT4PgYUZ-Rzbj8t/view?usp=sharing" target="_blank">
-          <img src="img/map/map2-island-north.jpg" alt="Forest" style="width:100%">
-        </a>
-        
-      </div>
-      <div class="map">
-        <div class="image-description">
-
-          <p>Mysterious Island Map 2 Southern Part</p>
-        </div>
-        <a href="https://drive.google.com/file/d/1ZCXG0kbGXIAxjr2f_9a_iCwStNpmjhm8/view?usp=sharing" target="_blank">
-          <img src="img/map/map2-island-south.jpg" alt="Forest" style="width:100%">
-        </a>
       </div>
     </div>
 
