--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="map">
         <div class="image-description">
 
-          <p>Mysterious Island Map 2 Eastern Part</p>
+          <p>Mysterious Island Map 3</p>
         </div>
         <a href="https://drive.google.com/file/d/1MChco1WmRy-Ofj6byy-M4uRSfdJXdhBm/view?usp=sharing" target="_blank">
           <img src="img/map/map3.jpg" alt="Forest" style="width:100%">
