--- a/index.html
+++ b/index.html
@@ -209,6 +209,18 @@
         Your browser does not support the video tag.
       </video>
     </div>
+    <div id="inline-description">
+        <p>An Economical Way to defeat Rufus</p>
+        <p>source: Infinite Dreams</a></p>
+    </div>
+    <div id="debuff-tutorial">
+      <video width="640" height="360" controls>
+        <!-- Specify the URL of the video file using the src attribute -->
+        <source src="video/Rufus.mp4" type="video/mp4">
+        <!-- Provide a fallback message for browsers that do not support HTML5 video -->
+        Your browser does not support the video tag.
+      </video>
+    </div>
     <!-- //// -->
     <!-- Archived Mysterious Island Map -->
     <!-- //// -->
