--- a/index.html
+++ b/index.html
@@ -103,13 +103,23 @@
       <div class="map">
         <div class="image-description">
 
-          <p>Mysterious Island Map 3</p>
+          <p>Mysterious Island Map 3 Northern Part</p>
+        </div>
+        <a href="https://drive.google.com/file/d/1e-xUZJWswl1Z_6GYH9qfwj8tWTzFg8FQ/view?usp=sharing" target="_blank">
+          <img src="img/map/map3-island-north.jpg" alt="Forest" style="width:100%">
+        </a>
+        
+      </div>
+      <div class="map">
+        <div class="image-description">
+
+          <p>Mysterious Island Map 3 Southern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1MChco1WmRy-Ofj6byy-M4uRSfdJXdhBm/view?usp=sharing" target="_blank">
           <img src="img/map/map3.jpg" alt="Forest" style="width:100%">
         </a>
         
-      </div>
+      </div>      
     </div>
 
     <!-- //// -->
