--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
       <div class="map">
         <div class="image-description">
 
+          <p>Mysterious Island Map 3 Eastern Part</p>
+        </div>
+        <a href="https://drive.google.com/file/d/1o2lJhNghpV2iFdYscW1EpgE2OoYvlfDM/view?usp=sharing" target="_blank">
+          <img src="img/map/map3-island-east.jpg" alt="Forest" style="width:100%">
+        </a>
+        
+      </div>      
+      <div class="map">
+        <div class="image-description">
+
           <p>Mysterious Island Map 3 Northern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1e-xUZJWswl1Z_6GYH9qfwj8tWTzFg8FQ/view?usp=sharing" target="_blank">
