--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <p>Mysterious Island Map 3 Eastern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1o2lJhNghpV2iFdYscW1EpgE2OoYvlfDM/view?usp=sharing" target="_blank">
-          <img src="img/map/map3-island-east.jpg" alt="Forest" style="height:100%">
+          <img src="img/map/map3-island-east.jpg" alt="Forest" style="width:40%">
         </a>
         
       </div>      
