update tutorial description and thumbnail

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <img src="img/thumb-nail/gift.png" alt="Card Image">
             <div class="card-content">
                   <h3>Free Gifts & pet adventure maps</h3>
-                  <p>Free gifts and pet adventure maps.</p>
+                  <p></p>
             </div>
         </div>
         <div class="card" url="https://docs.google.com/presentation/d/1DebO28XwBUf4j9pOm-JZ2gZb_tmSXSE8e23kYc-r6jc/edit#slide=id.p" onclick="cardClick(this.getAttribute('url'))">
@@ -149,7 +149,7 @@
           <img src="img/thumb-nail/artifact.png" alt="Card Image">
           <div class="card-content">
             <h3>Hero Artifact Effect</h3>
-            <p>Hero's artifact effect.</p>
+            <p></p>
           </div>
         </div>
         <div class="card" url="https://docs.google.com/presentation/d/1OQppmCMqesDuLcTyiJSHEcfYprvp-5KOVmYzxyID_QY/edit#slide=id.p" onclick="cardClick(this.getAttribute('url'))">
@@ -184,14 +184,14 @@
           <img src="img/thumb-nail/GW.png" alt="Card Image">
           <div class="card-content">
             <h3>Guild War</h3>
-            <p>Member's time zone and suggestion for members who are tired of waiting in Guild War.</p>
+            <p>Member's time zone and hint for defeating players on s124.</p>
           </div>
         </div>
         <div class="card" url="https://hero-wars-guide.web.app/schedule" onclick="cardClick(this.getAttribute('url'))">
-          <img src="img/thumb-nail/schedule.png" alt="Card Image">
+          <img src="img/thumb-nail/eventschedule.png" alt="Card Image">
           <div class="card-content">
             <h3>Event Schedule</h3>
-            <p>Detailed quests, rewards, schedule, date, etc of upcoming events.</p>
+            <p>Detailed quests, rewards, schedule of upcoming events.</p>
           </div>
         </div>
     </div>
