--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <div class="guildwarlog-container">
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-1</div>
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-2</div>
+      <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-3</div>
     </div>
 
     <div class="footer"></div>
