--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
     <div class="horizontal-line"></div>
     <h1 id="GWLog"><a href="#GWLog" class=title>Guild War Log</a></h1>
     <div class="guildwarlog-container">
+      
+      <button onclick="window.location.href='https://edmondychuang.github.io/'">Battle Test Replay</button>
       <div class="button" onclick="buttonClick(this.innerHTML)">ASGARD</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">KATANA</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">KONOHA</div>
