--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h1 id="GWLog"><a href="#GWLog" class=title>Guild War Log</a></h1>
     <div class="guildwarlog-container">
       
-      <button onclick="window.location.href='https://edmondychuang.github.io/'">Battle Test Replay</button>
+      <button onclick="window.location.href='https://edmondychuang.github.io/replay/aaa.html'">Battle Test Replay</button>
       <div class="button" onclick="buttonClick(this.innerHTML)">ASGARD</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">KATANA</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">KONOHA</div>
