--- a/index.html
+++ b/index.html
@@ -98,7 +98,15 @@
     <!-- Latest Mysterious Island Map -->
     <!-- //// -->
     <div class="row">
+      <div class="map">
+        <div class="image-description">
 
+          <p>Mysterious Island Map 4 Eastern Part</p>
+        </div>
+        <a href="https://drive.google.com/file/d/1DvSNePzq8TXCSSV0Hkmyk0K3G2gM2pYq/view?usp=sharing" target="_blank">
+          <img src="img/map/summer_fest.jpg" alt="Forest" style="width:100%">
+        </a>
+      </div>  
       <div class="map">
         <div class="image-description">
 
