--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
       <div class="map">
         <div class="image-description">
 
-          <p>Mysterious Island Map 4 Eastern Part</p>
+          <p>Mysterious Island Map 4 Central Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1DvSNePzq8TXCSSV0Hkmyk0K3G2gM2pYq/view?usp=sharing" target="_blank">
-          <img src="img/map/summer_fest.jpg" alt="Forest" style="width:100%">
+          <img src="img/map/summer_fest.jpg" alt="Forest" style="width:45%">
         </a>
       </div>  
       <div class="map">
@@ -113,7 +113,7 @@
           <p>Mysterious Island Map 4 Eastern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/1UNtB7gbnsqdsiFaHbjiEjoquY38TBkM6/view?usp=sharing" target="_blank">
-          <img src="img/map/map-4-box.jpg" alt="Forest" style="width:100%">
+          <img src="img/map/map-4-box.jpg" alt="Forest" style="width:60%">
         </a>
         
       </div>  
