--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
     <!-- Latest Mysterious Island Map -->
     <!-- //// -->
     <div class="row">
+
+
+      <div class="map">
+        <div class="image-description">
+
+          <p>Mysterious Island Map 4 Southern Part</p>
+        </div>
+        <a href="https://drive.google.com/file/d/1dHyUmxzSxZkdYlmLoDbsCmFIUz2bZsVH/view?usp=sharing" target="_blank">
+          <img src="img/map/map4-4.jpg" alt="Forest" style="width:45%">
+        </a>
+      </div> 
       <div class="map">
         <div class="image-description">
 
