--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-1</div>
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-2</div>
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-3</div>
+      <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-4</div>
     </div>
 
     <div class="footer"></div>
