--- a/index.html
+++ b/index.html
@@ -100,18 +100,18 @@
     <div class="row">
       <div class="map">
         <div class="image-description">
-          <p>Mysterious Island Map 5</p>
+          <p>Mysterious Island Map 5 Northern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/17NkTLl7tDTkSKToz2QO3N6g3eMO_OzxC/view?usp=sharing" target="_blank">
-          <img src="img/map/map5-1.webp" alt="Forest" style="width:100%">
+          <img src="img/map/map5-2.webp" alt="Forest" style="width:100%">
         </a>
       </div> 
       <div class="map">
         <div class="image-description">
-          <p>Mysterious Island Map 5</p>
+          <p>Mysterious Island Map 5 Southern Part</p>
         </div>
         <a href="https://drive.google.com/file/d/17NkTLl7tDTkSKToz2QO3N6g3eMO_OzxC/view?usp=sharing" target="_blank">
-          <img src="img/map/map5-2.webp" alt="Forest" style="width:100%">
+          <img src="img/map/map5-1.webp" alt="Forest" style="width:100%">
         </a>
       </div> 
     </div>
