--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@
       
       <div class="map">
         <div class="image-description">
+          <p>奧古斯都 (Augstus)</p>
+        </div>
+        <p>130~170 0 buff</p>
+        <img src="img/augstus/130-170.jpg" alt="Forest" style="width:45%">
+        <p>180 0 buff</p>
+        <img src="img/augstus/180.png" alt="Forest" style="width:45%">
+
+      </div>        
+    </div>
+    <div class="horizontal-line"></div>
+    <div class="row">
+
+      
+      <div class="map">
+        <div class="image-description">
 
           <p>Mysterious Island Map 4</p>
         </div>
