--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
           <p>奧古斯都 (Augstus)</p>
         </div>
         <p>130~170 0 buff</p>
-        <img src="img/augstus/130-170.jpg" alt="Forest" style="width:45%">
+        <img src="img/other/130-170.jpg" alt="Forest" style="width:45%">
         <p>180 0 buff</p>
-        <img src="img/augstus/180.png" alt="Forest" style="width:45%">
+        <img src="img/other/180.png" alt="Forest" style="width:45%">
 
       </div>        
     </div>
