--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <div class="horizontal-line"></div>
     <h1 id="GWLog"><a href="#GWLog" class=title>Guild War Log</a></h1>
     <div class="guildwarlog-container">
+      <div class="button" onclick="buttonClick(this.innerHTML)">OSHBOSS</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">ASGARD</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">KATANA</div>
       <div class="button" onclick="buttonClick(this.innerHTML)">KONOHA</div>
