--- a/guildwar-dashboard/OSHBOSS.html
+++ b/guildwar-dashboard/OSHBOSS.html
@@ -15,12 +15,12 @@
 
         <!-- Middle Column -->
         <div class="column middle-column">
-            <button onclick="showImage('../img/team1.jpg')">隊伍 1/Team 1</button>
-            <button onclick="showImage('../img/team2.jpg')">隊伍 2/Team 2</button>
-            <button onclick="showImage('../img/team3.jpg')">隊伍 3/Team 3</button>
-            <button onclick="showImage('../img/team4.jpg')">隊伍 4/Team 4</button>
-            <button onclick="showImage('../img/team1.jpg')">隊伍 5/Team 5</button>
-            <button onclick="showImage('../img/buff.jpg')">增益/buff</button>
+            <button onclick="showImage('../img/team1.jpg')">隊伍 1<br>Team 1</button>
+            <button onclick="showImage('../img/team2.jpg')">隊伍 2<br>Team 2</button>
+            <button onclick="showImage('../img/team3.jpg')">隊伍 3<br>Team 3</button>
+            <button onclick="showImage('../img/team4.jpg')">隊伍 4<br>Team 4</button>
+            <button onclick="showImage('../img/team1.jpg')">隊伍 5<br>Team 5</button>
+            <button onclick="showImage('../img/buff.jpg')">增益<br>buff</button>
         </div>
 
         <!-- Right Column -->
