change button description

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
   </head>
   <body>
     <div class="guildwarlog-container">
-      <div class="button" onclick="Taipei101buttonClick('OSHBoss/index.html')">OSH BOSS</div>
-      <div class="button" onclick="Taipei101buttonClick('PhantomBoss/index.html')">Phantom Boss</div>
-      <div class="button" onclick="Taipei101buttonClick('team-counter/index.html')">team counter</div>
+      <div class="button" onclick="Taipei101buttonClick('OSHBoss/index.html')">舊升天王奧許160級攻擊隊伍<br>Teams for OSH 160</div>
+      <div class="button" onclick="Taipei101buttonClick('PhantomBoss/index.html')">新升天王160級攻擊隊伍<br>Teams for Phantom Orchestra 160</div>
+      <div class="button" onclick="Taipei101buttonClick('team-counter/index.html')">英雄隊伍攻擊建議指南<br>Team counter suggestion</div>
     </div>
     <div class="horizontal-line"></div>
     <div class="row">
