add fortification buff

--- a/team-counter/index.html
+++ b/team-counter/index.html
@@ -11,8 +11,40 @@
     <!-- Left Column: Avatar Images -->
     <div class="column left-column">
       <p>請選擇敵方隊伍出現的英雄 Select a hero in enemy team.</p>  
-      <div id="avatar-container">
+      <div id="avatar-container"> 
+        <!-- Avatar images will be dynamically added here -->    
+      </div>
+      <p style="margin-top: 1px; margin-bottom: 16px">交鋒世界建築增益的圖例 Buff Legend in CoW Fortification.</p>
+      <div id="cow-container">
         <!-- Avatar images will be dynamically added here -->
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/990.png" alt="990" style="margin-right: 10px;">
+          <p>傷害減少: 靶場. Damage Decrease: Shooting Range.</p>
+        </div>
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/991.png" alt="991" style="margin-right: 10px;">
+          <p>治療力增加: 市政廳. Healing Increase: City Hall.</p>
+        </div>
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/992.png" alt="992" style="margin-right: 10px;">
+          <p>魔法防禦力增加: 堡壘. Magic Defense Increase: Bastion.</p>
+        </div>
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/993.png" alt="993" style="margin-right: 10px;">
+          <p>技能冷卻加快: 燈塔. Skill Cooldown Speedup: Lighthouse.</p>
+        </div>
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/994.png" alt="994" style="margin-right: 10px;">
+          <p>最大生命值提高: 鑄造工廠. Max Health Increase: Foundry.</p>
+        </div>
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/995.png" alt="995" style="margin-right: 10px;">
+          <p>護甲增加: 煉金塔. Armor Increase: Alchemy Tower.</p>
+        </div>
+        <div style="display: flex; align-items: center;">
+          <img src="CoW-fortification/996.png" alt="996" style="margin-right: 10px;">
+          <p>能量獲取提升: 工程館. Energy Gain Increase: Engineerium.</p>
+        </div>
       </div>
     </div>
 
