--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/guildwar-log.css">
     <link rel="stylesheet" href="css/tutorial-slide.css">
     <script language="javascript" src="js/OSH.js"></script>
+    <link href="https://clownfish-app-hd3eu.ondigitalocean.app/dist/Artalk.css" rel="stylesheet" />
+    <!-- JS -->
+    <script src="https://clownfish-app-hd3eu.ondigitalocean.app/dist/Artalk.js"></script>
     <style>
         * {
           box-sizing: border-box;
@@ -244,7 +247,7 @@
     <div class="guildwarlog-container">
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-1</div>
       <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-2</div>
-      <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-3</div>
+      <div class="button" onclick="mapButtonClick(this.innerHTML)">Map-33</div>
     </div>
 
     <div class="footer"></div>
@@ -252,6 +255,16 @@
     <p id="timezone"></p>
     <p id="time-left"></p>
     
+    <div id="Comments"></div>
+    <script>
+    Artalk.init({
+      el:        '#Comments',                       // 绑定元素的 Selector
+      pageKey:   '/post/1',                         // 固定链接
+      pageTitle: '关于引入 Artalk 的这档子事',         // 页面标题 (留空自动获取)
+      server:    'https://clownfish-app-hd3eu.ondigitalocean.app',  // 后端地址
+      site:      'Artalk 的博客',                    // 你的站点名
+    })
+    </script>
 
     <script>
       
