--- a/PhantomBoss/index.html
+++ b/PhantomBoss/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Left Column -->
         <div class="column left-column">
-            <img src="img/teams.jpg" alt="Static Image" id="staticImage">
+            <img src="img/teams_new.jpg" alt="Static Image" id="staticImage">
         </div>
 
         <!-- Middle Column -->
