--- a/PhantomBoss/index.html
+++ b/PhantomBoss/index.html
@@ -11,6 +11,8 @@
         <!-- Left Column -->
         <div class="column left-column">
             <img src="img/teams_new.jpg" alt="Static Image" id="staticImage">
+            <p>需用外掛<b>HWS</b>打, 不要用外掛<b>Goodwin</b></p>
+            <p>We recommend fighting with plugin <b>Hero Wars Simulator(HWS)</b>. Don't fight with plugin <b>Goodwin</b>.</p>
         </div>
 
         <!-- Middle Column -->
