--- a/PhantomBoss/index.html
+++ b/PhantomBoss/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Left Column -->
         <div class="column left-column">
-            <img src="img/teams_new.jpg" alt="Static Image" id="staticImage">
+            <img src="img/teams.jpg" alt="Static Image" id="staticImage">
             <p>需用外掛<b>HWS</b>打, 不要用外掛<b>Goodwin</b></p>
             <p>We recommend fighting with plugin <b>Hero Wars Simulator(HWS)</b>. Don't fight with plugin <b>Goodwin</b>.</p>
         </div>
@@ -21,7 +21,9 @@
             <button onclick="showImage('img/team2.jpg')">隊伍 2<br>Team 2</button>
             <button onclick="showImage('img/team3.jpg')">隊伍 3<br>Team 3</button>
             <button onclick="showImage('img/team4.jpg')">隊伍 4<br>Team 4</button>
+            <button onclick="showImage('img/team5.jpg')">隊伍 5<br>Team 5</button>
             <button onclick="showImage('img/buff.jpg')">增益<br>buff</button>
+            <button onclick="showImage('img/setting.jpg')">HWH 設定<br>HWH setting</button>
         </div>
 
         <!-- Right Column -->
